--- a/SimpleQRCodeSystem/packages.config
+++ b/SimpleQRCodeSystem/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
-  <package id="System.Data.SQLite" version="1.0.97.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.Core" version="1.0.97.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.Core.MSIL" version="1.0.97.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.EF6" version="1.0.97.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.Linq" version="1.0.97.0" targetFramework="net45" />
+  <package id="CsvHelper" version="2.14.2" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
+  <package id="System.Data.SQLite" version="1.0.101.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.101.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Data.SQLite.Core.MSIL" version="1.0.101.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Data.SQLite.EF6" version="1.0.101.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Data.SQLite.Linq" version="1.0.101.0" targetFramework="net45" requireReinstallation="true" />
 </packages>
