--- a/SimpleQRCodeSystem/SimpleQRCodeSystem.csproj
+++ b/SimpleQRCodeSystem/SimpleQRCodeSystem.csproj
@@ -72,6 +72,10 @@
       <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="NodaTime, Version=1.3.0.0, Culture=neutral, PublicKeyToken=4226afe0d9b296d1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NodaTime.1.3.2\lib\net35-Client\NodaTime.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
@@ -104,11 +108,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="IModels\IBadge.cs" />
     <Compile Include="Models\Badge.cs" />
     <Compile Include="Models\BadgeResult.cs" />
-    <Compile Include="Repositories\Json\BadgeRepository.cs" />
-    <Compile Include="Repositories\Sqlite\BadgeRepository.cs" />
+    <Compile Include="Repositories\BadgeRepository.cs" />
     <Compile Include="Repositories\IBadgeRepository.cs" />
     <Compile Include="Services\IBadgeService.cs" />
     <Compile Include="Services\BadgeService.cs" />
