--- a/SimpleQRCodeSystem/packages.config
+++ b/SimpleQRCodeSystem/packages.config
@@ -4,6 +4,7 @@
   <package id="CsvHelper" version="2.14.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
+  <package id="NodaTime" version="1.3.2" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.101.0" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.101.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Data.SQLite.Core.MSIL" version="1.0.101.0" targetFramework="net461" requireReinstallation="true" />
